# SolanaFirewall

./: Anchor.toml  Cargo.toml  GRANT_APPLICATION.html  GRANT_APPLICATION.md  README.md  package.json  tsconfig.json
programs/x402-firewall/: Cargo.toml
programs/x402-firewall/src/: errors.rs  events.rs  lib.rs  policy.rs  state.rs
scripts/: demo.ts  deploy.ts
sdk/: package.json
sdk/src/: index.ts
tests/: x402-firewall.ts
website/: app.config.ts  index.html  init.mjs  init2.mjs  init3.mjs  init4.mjs  init5.mjs  init6.mjs  init7.mjs  init8.mjs  package.json  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
website/src/: App.jsx  entry-client.tsx  index.css  styles.css
website/src/components/: AppPage.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  MadForDev.tsx  NavBar.jsx  PillTags.tsx  Pricing.tsx  Stats.tsx  Updates.tsx  WalletProvider.tsx  assets.ts  shared.tsx
website/src/hooks/: useFirewall.ts
website/src/pages/: Dashboard.jsx  Landing.jsx
website/src/routes/: __root.tsx  app.tsx  index.tsx
website/src/sections/: BenefitSection.jsx  FooterSection.jsx  HeroSection.jsx
