[package]
name = "x402-firewall"
version = "0.1.0"
description = "On-chain payment firewall for autonomous AI agent payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x402_firewall"

[features]
no-entrypoint = []
no-idl = []
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
